--- a/doc/news.txt
+++ b/doc/news.txt
@@ -1093,22 +1093,40 @@ cpu ngs и cpu спектрума)
 + Добавлена возможноть монохромного режима высокого разрешения для profi (molodcov_alex)
 + Добавлена команда ata 0x50 (format track)
 ! Исправлена ошибка с автоматическим добавлением boot.b на дискеты с не tr-dos форматом
-! Исправлена ошибка ВГ93 (отсутствовало состояние BUSY в команде seek) из-за этого
++ Исправлена ошибка ВГ93 (отсутствовало состояние BUSY в команде seek) из-за этого
  profi-dos вис на опросе готовности (проверялся переход READY->BUSY->READY)
 
 
-        version 0.37.3.fix5              unreleased (deathsoft)
+        version 0.37.3.fix5              16 jun 2010 (deathsoft)
 
-! Исправлена ошибка с блокировкой памяти через EFF7 на pentagon 1024 (VELESOFT)
+* Исправлена ошибка с блокировкой памяти через EFF7 на pentagon 1024 (VELESOFT)
 + Поддержка z80 снапшотов для +3 (VELESOFT)
 + Вывод сообщения об ошибке при неправильном размере rom для ngs (jtn)
 + Добавлена поддержка записи на sdcard
 + Проверка параметров ata команды 0x91 (Initialize device parameters) (savelij)
 + Добавлен автодетект lba для образов hdd у которых в ini файле прописано lba=0
-! Исправлена ошибка ВГ93 (отсутствовало состояние BUSY в командах read/write)
-! Исправлена ошибка ВГ93 (при отсутствии диска в командах read/write BUSY должно быть бесконечно долго)
+* Исправлена ошибка ВГ93 (отсутствовало состояние BUSY в командах read/write)
+* Исправлена ошибка ВГ93 (при отсутствии диска в командах read/write BUSY должно быть бесконечно долго)
 + Добавлены команды 9 и 10 для sd карт
-! Исправлена ошибка с путями к образам hdd
+* Исправлена ошибка с путями к образам hdd
 ! Исправлена ошибка с восстановлением surface'ов при отрисовке через blt
 + Сделана поддержка .pro формата образов дискет (образы дискет cp/m profi, аналог .trd совместимо с ZX Disk Studio)
 ! Исправлена ошибка с добавлением boot в trd образы
+
+        version 0.37.4                   18 jan 2011 (deathsoft)
+
+* Убраны задержки позиционирования в tr-dos traps
++ Добавлена ide часть от divide
++ Добавлен режим divide на портах nemoide (работает inir/otir)
++ Добавлена поддержка quorum 128/1024
++ Добавлен выбор джойстиков через ini файл
++ Добавлена поддержка 32 кнопок для джойстика
+! Исправлена обработка прерываний и команды halt (раньше в отладчике halt выполнялся как nop не ожидая прихода прерывания) (psb)
++ Добавлена поддержка ATM3 (4Мб)
++ Добавлена индикация блокировки 48k в отладчике (только для 7ffd)
++ Добавлена натройка порта FF (включение/выключение)
++ Добавлены SSE2 версии фильтров normal и double
++ Добавлены фильтры advmame 2x и 3x для 32bpp
++ Добавлен фильтр triple (масштабирование 3x)
++ Добавлена поддержа saa1099 (включается через ini файл)
+! Исправлены ошибки ВГ93 (заработал журнал zx expert из udi образа) (fk0, jtn, savelij)
